<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B0C4DE"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_marginTop="40dp"
            android:layout_marginHorizontal="30dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:background="@drawable/border"
            android:layout_height="260dp">

            <TextView
                android:textSize="15dp"
                android:layout_marginLeft="10dp"
                android:paddingHorizontal="3dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:background="#B0C4DE"
                android:text="@string/employee_data"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginVertical="10dp"
                android:layout_marginRight="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textColor="@color/black"
                    android:textSize="15dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/nameInput"
                    android:layout_width="140dp"
                    android:layout_height="26dp"
                    android:background="@color/white"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginVertical="10dp"
                android:layout_marginRight="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/surname"
                    android:textColor="@color/black"
                    android:textSize="15dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/surnameInput"
                    android:layout_width="140dp"
                    android:layout_height="26dp"
                    android:background="@color/white"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginVertical="10dp"
                android:layout_marginRight="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/position"
                    android:textColor="@color/black"
                    android:textSize="15dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Spinner
                    android:id="@+id/positionComboBox"
                    android:layout_width="140dp"
                    android:layout_height="26dp"
                    android:background="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="40dp"
            android:layout_marginHorizontal="30dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:background="@drawable/border"
            android:layout_height="260dp">

            <TextView
                android:layout_marginLeft="10dp"
                android:paddingHorizontal="3dp"
                android:textSize="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:background="#B0C4DE"
                android:text="@string/password_generation"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/how_many_signs"
                    android:textColor="@color/black"
                    android:textSize="15dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/characterCountInput"
                    android:layout_width="140dp"
                    android:layout_height="26dp"
                    android:background="@color/white"
                    android:textColor="@color/black"
                    android:imeOptions="actionDone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <CheckBox
                android:id="@+id/varyingSizesCheck"
                android:layout_marginLeft="20dp"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/small_and_big_letters" />

            <CheckBox
                android:id="@+id/digitsCheck"
                android:layout_marginLeft="20dp"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/digits" />

            <CheckBox
                android:id="@+id/specialCharactersCheck"
                android:layout_marginLeft="20dp"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/special_characters" />

            <Button
                android:id="@+id/generatePasswordButton"
                android:layout_width="90dp"
                android:layout_height="20dp"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:background="#4682B4"
                android:text="@string/generate_password"/>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/confirmButton"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:paddingHorizontal="100dp"
        android:layout_width="wrap_content"
        android:textColor="@color/white"
        android:text="@string/confirm"
        android:textAllCaps="false"
        android:background="#4682B4"
        android:layout_height="20dp"/>

</LinearLayout>